// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="project-activity-event"
>
  <ProjectEventIcon
    className="project-activity-event-icon little-spacer-right text-middle OTHER"
  />
  <EventInner
    event={
      Object {
        "category": "OTHER",
        "description": "Lorem ipsum dolor sit amet",
        "key": "E11",
        "name": "Lorem ipsum",
        "qualityGate": Object {
          "failing": Array [
            Object {
              "branch": "master",
              "key": "foo",
              "name": "Foo",
            },
            Object {
              "branch": "feature/bar",
              "key": "bar",
              "name": "Bar",
            },
          ],
          "status": "ERROR",
          "stillFailing": true,
        },
      }
    }
  />
</div>
`;

exports[`should render correctly: with admin options 1`] = `
<div
  className="project-activity-event"
>
  <ProjectEventIcon
    className="project-activity-event-icon little-spacer-right text-middle OTHER"
  />
  <EventInner
    event={
      Object {
        "category": "OTHER",
        "description": "Lorem ipsum dolor sit amet",
        "key": "E11",
        "name": "Lorem ipsum",
        "qualityGate": Object {
          "failing": Array [
            Object {
              "branch": "master",
              "key": "foo",
              "name": "Foo",
            },
            Object {
              "branch": "feature/bar",
              "key": "bar",
              "name": "Bar",
            },
          ],
          "status": "ERROR",
          "stillFailing": true,
        },
      }
    }
  />
  <span
    className="nowrap"
  >
    <EditButton
      aria-label="project_activity.events.tooltip.edit"
      className="button-small"
      data-test="project-activity__edit-event"
      onClick={[Function]}
      stopPropagation={true}
    />
    <DeleteButton
      aria-label="project_activity.events.tooltip.delete"
      className="button-small"
      data-test="project-activity__delete-event"
      onClick={[Function]}
      stopPropagation={true}
    />
  </span>
</div>
`;
